dia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: dia
    app.kubernetes.io/name: dia
  name: dia
  namespace: dia
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: dia
      app.kubernetes.io/name: dia
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dia
        app.kubernetes.io/name: dia
    spec:
      runtimeClassName: nvidia
      nodeName: crobceratops # Node with the 3060 GPU

      containers:
        - image: gitea.crobasaurusrex.ryanbeales.com/ryanbeales/dia:latest
          imagePullPolicy: IfNotPresent
          name: dia
          ports:
          - containerPort: 7860
            name: http
            protocol: TCP
          resources:
            requests:
              nvidia.com/gpu: '1' # requesting 1 GPU (3060 is diviged into 4 GPUs)
            limits:
              nvidia.com/gpu: '1'
