dia/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dia
  name: dia
  namespace: dia
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: dia
      port: 7860
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: dia
  sessionAffinity: None
  type: ClusterIP
