dia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
  labels:
    app.kubernetes.io/name: dia
  name: dia
  namespace: dia
spec:
  ingressClassName: nginx
  rules:
    - host: dia.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: dia
                port:
                  number: 7860
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dia.crobasaurusrex.ryanbeales.com
      secretName: dia-crobasaurusrex-ryanbeales-com-tls
